Fixed spacing of image and paragraphs in projects

--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -18,7 +18,6 @@
 
   .projects-parent-container {
     margin: 0 auto;
-    width: 60%;
   }
 
   .project-lift-gif {
